--- a/Notepade/App.axaml
+++ b/Notepade/App.axaml
@@ -1,7 +1,7 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:Notepade"
-             x:Class="Notepade.App">
+             xmlns:local="using:Notepad"
+             x:Class="Notepad.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
@@ -9,4 +9,12 @@
     <Application.Styles>
         <FluentTheme Mode="Light"/>
     </Application.Styles>
+
+	<Application.Resources>
+		<Image x:Key="back_folder" Source="/Assets/back_folder.png" />
+		<Image x:Key="drive" Source="/Assets/drive.png" />
+		<Image x:Key="file" Source="/Assets/file.png" />
+		<Image x:Key="folder" Source="/Assets/folder.png" />
+		<Image x:Key="sys_drive" Source="/Assets/sys_drive.png" />
+	</Application.Resources>
 </Application>
