--- a/Notepade/Views/MainWindow.axaml
+++ b/Notepade/Views/MainWindow.axaml
@@ -1,24 +1,64 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:Notepade.ViewModels"
+        xmlns:vm="using:Notepad.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="550"
-		Width = "400" Height ="550"
-        x:Class="Notepade.Views.MainWindow"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="Notepade">
+        mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="700"
+		Width="500" Height="700"
+        x:Class="Notepad.Views.MainWindow"
+        Icon="/Assets/vectorasd-logo.ico"
+        Title="Notepad"
+		xmlns:conv="clr-namespace:Notepad.Views.Converters">
 
-    <Design.DataContext>
-        <vm:MainWindowViewModel/>
-    </Design.DataContext>
+	<Window.Resources>
+		<conv:FileTypeToImage x:Key="myConverter"/>
+	</Window.Resources>
 
-		<Grid ColumnDefinitions="auto" RowDefinitions="485,30,30">
+	<Window.Styles>
+		<Style Selector="Button">
+			<Setter Property="Background" Value="White"/>
+			<Setter Property="Foreground" Value="#08F"/>
+			<Setter Property="BorderBrush" Value="#08F"/>
+			<Setter Property="BorderThickness" Value="2"/>
+			<Setter Property="VerticalContentAlignment" Value="Center"/>
+			<Setter Property="HorizontalContentAlignment" Value="Center"/>
+		</Style>
+		<Style Selector="Button.b1">
+			<Setter Property="FontSize" Value="28"/>
+			<Setter Property="Width" Value="500"/>
+			<Setter Property="Height" Value="50"/>
+		</Style>
+		<Style Selector="Button.b2">
+			<Setter Property="FontSize" Value="32"/>
+			<Setter Property="Width" Value="250"/>
+			<Setter Property="Height" Value="58"/>
+		</Style>
+		<Style Selector="ListBoxItem">
+			<Setter Property="Padding" Value="6"/>
+		</Style>
+		
+	</Window.Styles>
 
-			<TextBox Name="contentTextBox" Text="Binding addToText" Grid.Row="0"  Grid.Column="0" Width="400" />
-			<Button  Name="openButton" Grid.Row="1"  Grid.Column="0" Content="Открыть" Width="400" HorizontalContentAlignment="Center" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
-			<Button  Name="saveButton" Grid.Row="2"  Grid.Column="0" Content="Сохранить" Width="400" HorizontalContentAlignment="Center" VerticalAlignment="Bottom" HorizontalAlignment="Left" />
+	<Panel>
+		<Grid RowDefinitions="12*,*,*" IsVisible="{Binding !ExplorerMode}">
+			<TextBox Name="contentTextBox" Text="{Binding ContentBox}" AcceptsReturn="True" TextWrapping="NoWrap"></TextBox>
+			<Button Name="openButton" Grid.Row="1" Classes="b1" Command="{Binding Open}">Открыть</Button>
+			<Button Name="saveButton" Grid.Row="2" Classes="b1" Command="{Binding Save}">Сохранить</Button>
 		</Grid>
-
-
+		<Grid RowDefinitions="10*,*,*" ColumnDefinitions="*,*" IsVisible="{Binding ExplorerMode}">
+			<ListBox Items="{Binding FileList}" SelectedItem="{Binding SelectedItem}" DoubleTapped="DoubleTap" Name="fileListBox" Grid.ColumnSpan="2">
+				<ListBox.ItemTemplate>
+					<DataTemplate>
+						<Grid ColumnDefinitions="*,9*">
+							<Image Width="40" Height="40" Source="{Binding Type, Converter={StaticResource myConverter}}" Margin="5 0 5 0"/>
+							<TextBlock Grid.Column="1" Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+						</Grid>
+					</DataTemplate>
+				</ListBox.ItemTemplate>
+			</ListBox>
+			<TextBox Name="fileTextBox" Text="{Binding FileBox}" Grid.Row="1" Grid.ColumnSpan="2" TextWrapping="NoWrap"></TextBox>
+			<Button Name="okButton" Grid.Column="0" Grid.Row="2" Classes="b2" Command="{Binding Ok}" Content="{Binding ButtonMode}"/>
+			<Button Name="cancelButton" Grid.Column="1" Grid.Row="2" Classes="b2" Command="{Binding Cancel}">Отмена</Button>
+		</Grid>
+	</Panel>
 </Window>
